Two table features completed

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -8,6 +8,8 @@
       <a href="<%= goal_url(goal) %>"  >
         <%= h(goal.title) %>
       </a>
+      <br>
+      status: <%= goal.status %>  
     </li>
   <% end %>
 
